Sedona Pixel Perfect

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Седона</title>
@@ -8,189 +9,194 @@
   <link href="css/style.css" rel="stylesheet">
   <script src="js/script.js"></script>
 </head>
+
 <body>
-<div class="shadow container">
-  <header class="main-header container">
-    <nav class="navigation">
-      <div class="navigation-wrapper">
-        <img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/>
-        <ul class="navigation-list">
-          <li class="navigation-list-item"><a href="#">Информация </a></li>
-          <li class="navigation-list-item"><a href="#">Фото и видео </a></li>
-          <li class="navigation-list-item"><a href="#">Карта штата </a></li>
-          <li class="navigation-list-item"><a href="catalog.html">Гостиницы</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="container main-background">
-    <section class="section-content">
-      <img class="img-welcome" src="img/welcome.png" width="458" height="352" alt="Welcome to the gorgeus Sedona">
-      <img class="img-polygon" src="img/polygon.png" width="1202" height="59" alt="">
-    </section>
-    <section class="description-section">
-      <h1 class="title-h1">Седона — небольшой городок в Аризоне, заслуживающий большего!
-      </h1>
-      <p class="p-advantage">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-    </section>
-    <section class="first-advantage">
-      <div class="real-town">
-        <h2 class="first-h2">
-          Настоящий
-          городок
-        </h2>
-        <span class="number number-first">№1</span>
-        <p class="first-p">Седона — не аттракцион для туристов,
-          там течёт своя жизнь </p>
-      </div>
-      <div class="first-advantage-bg">
-      </div>
-    </section>
-    <section class="second-advantage">
-      <div class="housing">
-        <img src="img/icon-1.svg" alt="Icon House">
-        <h2 class="second-advantage-title">
-          Жильё
-        </h2>
-        <p>Рекомендуем пожить в настоящем
-          мотеле, все как в кино! </p>
-      </div>
-      <div class="food">
-        <img class="food-icon" src="img/icon-3.svg" alt="Icon Food">
-        <h2 class="second-advantage-title">
-          Еда
-        </h2>
-        <p> Всегда заказывайте фирменный бургер,
-          вы не разочаруетесь! </p>
-      </div>
-      <div class="souvenir">
-        <img class="gift-icon" src="img/icon-2.svg" alt="Icon Gift">
-        <h2 class="second-advantage-title">
-          Сувениры
-        </h2>
+  <div class="shadow container">
+    <header class="main-header container">
+      <nav class="navigation">
+        <div class="navigation-wrapper">
+          <img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona" />
+          <ul class="navigation-list">
+            <li class="navigation-list-item"><a href="#">Информация </a></li>
+            <li class="navigation-list-item"><a href="#">Фото и видео </a></li>
+            <li class="navigation-list-item"><a href="#">Карта штата </a></li>
+            <li class="navigation-list-item"><a href="catalog.html">Гостиницы</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="container main-background">
+      <section class="section-content">
+        <img class="img-welcome" src="img/welcome.png" width="458" height="352" alt="Welcome to the gorgeus Sedona">
+        <img class="img-polygon" src="img/polygon.png" width="1202" height="59" alt="">
+      </section>
+      <section class="description-section">
+        <h1 class="title-h1">Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h1>
+        <p class="p-advantage">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      </section>
+      <section class="first-advantage">
+        <div class="real-town">
+          <h2 class="first-h2">
+            Настоящий
+            городок
+          </h2>
+          <span class="number number-first">№1</span>
+          <p class="first-p">Седона — не аттракцион для туристов,
+            там течёт своя жизнь </p>
+        </div>
+        <div class="first-advantage-bg">
+        </div>
+      </section>
+      <section class="second-advantage">
+        <div class="housing">
+          <img src="img/icon-1.svg" alt="Icon House">
+          <h2 class="second-advantage-title">
+            Жильё
+          </h2>
+          <p>Рекомендуем пожить в настоящем
+            мотеле, все как в кино! </p>
+        </div>
+        <div class="food">
+          <img class="food-icon" src="img/icon-3.svg" alt="Icon Food">
+          <h2 class="second-advantage-title">
+            Еда
+          </h2>
+          <p> Всегда заказывайте фирменный бургер,
+            вы не разочаруетесь! </p>
+        </div>
+        <div class="souvenir">
+          <img class="gift-icon" src="img/icon-2.svg" alt="Icon Gift">
+          <h2 class="second-advantage-title">
+            Сувениры
+          </h2>
+          <p>
+            Не только китайского, но и местного
+            производства!
+          </p>
+        </div>
+      </section>
+      <section class="third-advantage">
+        <div class="canyon">
+        </div>
+        <div class="third-text">
+          <h2 class="third-h2"> Там есть
+            мост дьявола</h2>
+          <span class="number number-third">№2</span>
+          <p class="p-third">Да, по нему можно пройти! Если конечно
+            вы осмелитесь</p>
+        </div>
+      </section>
+      <section class="fourth-advantage">
+        <div class="area">
+          <h2>Небольшая площадь</h2>
+          <span class="number">№3</span>
+          <p>Все достопримечательности
+            находятся очень близко</p>
+        </div>
+        <div class="road">
+          <h2>Красивая дорога</h2>
+          <span class="number">№4</span>
+          <p>Ехать в Седону из Лас-вегаса совсем
+            не скучно!</p>
+        </div>
+        <div class="tourists">
+          <h2> Мало туристов</h2>
+          <span class="number">№5</span>
+          <p>Большинство едет в гранд каньон
+            и толпится там</p>
+        </div>
+      </section>
+      <div class="desc-div">
+        <h2> Заинтересовались?</h2>
         <p>
-          Не только китайского, но и местного
-          производства!
+          Укажите предполагаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
       </div>
-    </section>
-    <section class="third-advantage">
-      <div class="canyon">
+      <section class="search">
+        <form class="form modal-show" method="post" action="https://echo.htmlacademy.ru">
+          <button class="search-button" type="button">
+            <span class="title-search"> Поиск гостиницы в Седоне</span>
+          </button>
+          <div class="group-of-forms group-of-forms-hidden">
+            <div class="arrival-date">
+              <label class="label-date" for="arrival-date">Дата заезда:</label>
+              <input class="input-date" id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
+            </div>
+            <div class="date-of-departure">
+              <label class="label-date" for="date-of-departure">Дата выезда:</label>
+              <input class="input-date" id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
+            </div>
+            <div class="adults-children">
+              <div class="adults">
+                <label class="label-date" for="adults">Взрослые:</label>
+                <div class="quantity-counter">
+                  <button class="minus" type="button" aria-label="Убрать"></button>
+                  <input id="adults" type="text" name="quantity-adults" placeholder="2">
+                  <button class="plus" type="button" aria-label="Добавить"></button>
+                </div>
+              </div>
+              <div class="children">
+                <label for="children">Дети:</label>
+                <div class="quantity-counter">
+                  <button class="minus" type="button" aria-label="Убрать"></button>
+                  <input id="children" type="text" name="quantity-children" placeholder="0">
+                  <button class="plus" type="button" aria-label="Добавить"></button>
+                </div>
+              </div>
+            </div>
+            <button class="button-type-submit" type="submit">Найти</button>
+          </div>
+        </form>
+      </section>
+      <div class="map-wrapper">
+        <iframe class="iframe-map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995065.9122608851!2d-112.42935560283112!3d34.99307583741225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1571361049172!5m2!1sru!2sru"
+          width="1200" height="600" style="border:0;" allowfullscreen=""></iframe>
       </div>
-      <div class="third-text">
-        <h2 class="third-h2"> Там есть
-          мост дьявола</h2>
-        <span class="number number-third">№2</span>
-        <p class="p-third">Да, по нему можно пройти! Если конечно
-          вы осмелитесь</p>
-      </div>
-    </section>
-    <section class="fourth-advantage">
-      <div class="area">
-        <h2>Небольшая площадь</h2>
-        <span class="number">№3</span>
-        <p>Все достопримечательности
-          находятся очень близко</p>
-      </div>
-      <div class="road">
-        <h2>Красивая дорога</h2>
-        <span class="number">№4</span>
-        <p>Ехать в Седону из Лас-вегаса совсем
-          не скучно!</p>
-      </div>
-      <div class="tourists">
-        <h2> Мало туристов</h2>
-        <span class="number">№5</span>
-        <p>Большинство едет в гранд каньон
-          и толпится там</p>
-      </div>
-    </section>
-    <div class="desc-div">
-      <h2> Заинтересовались?</h2>
-      <p>
-        Укажите предполагаемые даты поездки,
-        и мы покажем вам лучшие предложения гостиниц в Седоне
+    </main>
+    <footer class="container footer">
+      <p class="hashtag">
+        #Visitsedona
       </p>
-    </div>
-    <section class="search">
-      <form class="form" class="modal-show" method="post" action="https://echo.htmlacademy.ru">
-        <button class="search-button" type="button">
-          <h2 class="title-search"> Поиск гостиницы в Седоне</h2>
-        </button>
-        <div class="group-of-forms group-of-forms-hidden">
-          <div class="arrival-date">
-            <label class="label-date" for="arrival-date">Дата заезда:</label>
-            <input class="input-date" id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
-          </div>
-          <div class="date-of-departure">
-            <label class="label-date" for="date-of-departure">Дата выезда:</label>
-            <input class="input-date" id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
-          </div>
-          <div class="adults-children">
-            <div class="adults">
-              <label class="label-date" for="adults">Взрослые:</label>
-              <div class="quantity-counter">
-                <button class="minus" type="button" aria-label="Убрать"></button>
-                <input id="adults" type="text" name="quantity-adults" placeholder="2">
-                <button class="plus" type="button" aria-label="Добавить"></button>
-              </div>
-            </div>
-            <div class="children">
-              <label for="children">Дети:</label>
-              <div class="quantity-counter">
-                <button class="minus" type="button" aria-label="Убрать"></button>
-                <input id="children" type="text" name="quantity-children" placeholder="0">
-                <button class="plus" type="button" aria-label="Добавить"></button>
-              </div>
-            </div>
-          </div>
-          <button class="button-type-submit" type="submit">Найти</button>
-        </div>
-      </form>
-    </section>
-    <div class="map-wrapper">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995065.9122608851!2d-112.42935560283112!3d34.99307583741225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1571361049172!5m2!1sru!2sru" width="1200" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-    </div>
-  </main>
-  <footer class="container footer">
-    <p class="hashtag">
-      #Visitsedona
-    </p>
-    <ul class="contacts-list">
-      <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15" alt="twitter">
-      </a></li>
-      <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22"
-                                            alt="facebook"></a></li>
-      <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16"
-                                            alt="youtube"></a></li>
-    </ul>
-    <p class="link-signature">
-      Website by
-      <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
-    </p>
-  </footer>
-</div>
-<script>
-	var serchButton = document.querySelector(".search-button");
-	var popup = document.querySelector(".group-of-forms");
+      <ul class="contacts-list">
+        <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15"
+              alt="twitter">
+          </a></li>
+        <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22"
+              alt="facebook"></a></li>
+        <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16"
+              alt="youtube"></a></li>
+      </ul>
+      <p class="link-signature">
+        Website by
+        <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+      </p>
+    </footer>
+  </div>
+  <script>
+    var serchButton = document.querySelector(".search-button");
+    var popup = document.querySelector(".group-of-forms");
 
-	serchButton.addEventListener("click", function (evt) {
-		evt.preventDefault();
+    serchButton.addEventListener("click", function (evt) {
+      evt.preventDefault();
 
-		// if (popup.classList.contains("group-of-forms-hidden")) {
-		//   popup.classList.remove("group-of-forms-hidden");
-		//   popup.classList.add("group-of-forms-show");
-		// } else if (popup.classList.contains('group-of-forms-show')) {
-		//   popup.classList.remove('group-of-forms-show');
-		//   popup.classList.add("group-of-forms-hidden");
-		// }
+      // if (popup.classList.contains("group-of-forms-hidden")) {
+      //   popup.classList.remove("group-of-forms-hidden");
+      //   popup.classList.add("group-of-forms-show");
+      // } else if (popup.classList.contains('group-of-forms-show')) {
+      //   popup.classList.remove('group-of-forms-show');
+      //   popup.classList.add("group-of-forms-hidden");
+      // }
 
-		if (popup.classList.contains("group-of-forms-hidden")) {
-			popup.classList.remove("group-of-forms-hidden");
-		} else {
-			popup.classList.add("group-of-forms-hidden");
-		}
-	});
-</script>
+      if (popup.classList.contains("group-of-forms-hidden")) {
+        popup.classList.remove("group-of-forms-hidden");
+      } else {
+        popup.classList.add("group-of-forms-hidden");
+      }
+    });
+  </script>
 </body>
+
 </html>
