--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Седона</title>
@@ -7,7 +8,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
+  <div class="shadow container">
   <header class="main-header container">
     <nav class="navigation">
       <div class="navigation-wrapper">
@@ -22,60 +25,64 @@
       </div>
     </nav>
   </header>
-
   <main class="container main-background">
-      <section class="filter">
-        <div class="infrastructure"> 
-          <div class="infrastructure-wraper">
+    <section class="filter">
+      <div class="infrastructure">
+        <div class="infrastructure-wraper">
           <span class="infrastructure-title">Инфраструктура:</span>
           <ul>
-            <li><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Бассейн</label></li>
-            <li><label class="check"><input class="check-input" type="checkbox"> <span class="check-box"></span>Парковка</label></li>
-            <li><label class="check"><input class="check-input" type="checkbox"><span class="check-box"></span>WI-FI</label></li>
+            <li><label class="check"><input class="check-input" type="checkbox" checked><span
+                  class="check-box"></span>Бассейн</label></li>
+            <li><label class="check"><input class="check-input" type="checkbox"> <span
+                  class="check-box"></span>Парковка</label></li>
+            <li><label class="check"><input class="check-input" type="checkbox"><span
+                  class="check-box"></span>WI-FI</label></li>
           </ul>
         </div>
         <div class="infrastructure-wraper-2">
-        <span class="infrastructure-title-2">Тип жилья:</span>
-        <ul>
-            <li><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Гостиница</label></li>
-            <li><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Мотель</label></li>
-            <li><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Апартаменты</label></li>
+          <span class="infrastructure-title-2">Тип жилья:</span>
+          <ul>
+            <li><label class="check"><input class="check-input" type="checkbox" checked><span
+                  class="check-box"></span>Гостиница</label></li>
+            <li><label class="check"><input class="check-input" type="checkbox" checked><span
+                  class="check-box"></span>Мотель</label></li>
+            <li><label class="check"><input class="check-input" type="checkbox" checked><span
+                  class="check-box"></span>Апартаменты</label></li>
           </ul>
         </div>
+      </div>
+      <div class="slider-wrapper">
+        <h2 class="slider-title">Стоимость в сутки (р):</h2>
+        <div class="slider-price-between">
+          <span class="price-min"> от 0 </span>
+          <span class="price-max"> до 3000 </span>
         </div>
-<div class="slider-wrapper">
-<h2 class="slider-title">Стоимость в сутки (р):</h2>
-<div class="slider-price-between">
-    <span class="price-min"> от 0 </span>
-    <span class="price-max"> до 3000 </span>
-</div>
-
-<div class="slider">
-  <div class="slider-background">
-     <span class="slider-button slider-button-left"></span> <div class="slider-background-active"></div> <span class="slider-button slider-button-right"></span>
-
- </div>
-</div>
-
-
-
-  <button class="button-show" type="button">Показать</button>
-</div>
-</section>
-<section class="filter-sort-wrapper">
-  <span class="filter-result-counter">Найдено: 3</span>
-  <span class="sort-text">Сортировка:</span>
-  <ul class="sort-list">
-    <li class="sort-item"><a href="#" class="sort-link active">По цене</a></li>
-    <li class="sort-item"><a href="#" class="sort-link">По типу</a></li>
-    <li class="sort-item"><a href="#" class="sort-link">По рейтингу</a></li>
-  </ul>
-  <div class="sort-order">
-    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" class="icon-order-asc"><path d="M5.5 0L0 10h11z"/></svg></a>
-    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" class="icon-order-desc active"><path d="M5.5 0L0 10h11z"/></svg></a>
-  </div>
-</section>
-
+        <div class="slider">
+          <div class="slider-background">
+            <span class="slider-button slider-button-left"></span>
+            <div class="slider-background-active"></div> <span class="slider-button slider-button-right"></span>
+          </div>
+        </div>
+        <button class="button-show" type="button">Показать</button>
+      </div>
+    </section>
+    <section class="filter-sort-wrapper">
+      <span class="filter-result-counter">Найдено: 3</span>
+      <span class="sort-text">Сортировка:</span>
+      <ul class="sort-list">
+        <li class="sort-item"><a href="#" class="sort-link active">По цене</a></li>
+        <li class="sort-item"><a href="#" class="sort-link">По типу</a></li>
+        <li class="sort-item"><a href="#" class="sort-link">По рейтингу</a></li>
+      </ul>
+      <div class="sort-order">
+        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"
+            class="icon-order-asc">
+            <path d="M5.5 0L0 10h11z" /></svg></a>
+        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"
+            class="icon-order-desc active">
+            <path d="M5.5 0L0 10h11z" /></svg></a>
+      </div>
+    </section>
     <section class="item-hotels">
       <ul class="list-hotel-description">
         <li class="li-item">
@@ -84,17 +91,17 @@
             <a href="#">
               <h2 class="title-name"> Amara resort & spa</h2>
             </a>
-            <p class="price">Гостиница от 4000 р.</p>
+            <p class="price"><span class="hotel-type">Гостиница</span> <span class="price-from">от 4000 р.</span></p>
             <a class="link-more" href="#">Подробнее</a>
             <a class="link-book" href="#">Забронировать</a>
             <span class="rating">Рейтинг: 8,5</span>
           </div>
           <ul class="rating-star">
-              <li> <img src="img/star.svg"></li>
-              <li> <img src="img/star.svg"></li>
-              <li> <img src="img/star.svg"></li>
-              <li> <img src="img/star.svg"></li>
-              </ul>
+            <li> <img src="img/star.svg" alt=""></li>
+            <li> <img src="img/star.svg" alt=""></li>
+            <li> <img src="img/star.svg" alt=""></li>
+            <li> <img src="img/star.svg" alt=""></li>
+          </ul>
         </li>
         <li class="li-item">
           <img class="hotel-img" src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
@@ -102,16 +109,16 @@
             <a href="#">
               <h2 class="title-name">Desert quail inn</h2>
             </a>
-            <p class="price">Мотель от 3000 р.</p>
+            <p class="price"><span class="hotel-type">Мотель</span> <span class="price-from">от 3000 р.</span></p>
             <a class="link-more" href="#">Подробнее</a>
             <a class="link-book" href="#">Забронировать</a>
             <span class="rating">Рейтинг: 8,9</span>
           </div>
           <ul class="rating-star">
-              <li> <img src="img/star.svg"></li>
-              <li> <img src="img/star.svg"></li>
-              <li> <img src="img/star.svg"></li>
-              </ul>
+            <li> <img src="img/star.svg" alt=""></li>
+            <li> <img src="img/star.svg" alt=""></li>
+            <li> <img src="img/star.svg" alt=""></li>
+          </ul>
         </li>
         <li class="li-item">
           <img class="hotel-img" src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
@@ -119,20 +126,20 @@
             <a href="#">
               <h2 class="title-name">Villas at poco diablo</h2>
             </a>
-            <p class="price">Апартаменты от 2000 р.</p>
+            <p class="price"><span class="hotel-type">Апартаменты</span> <span class="price-from">от 2000 р.</span></p>
             <a class="link-more" href="#">Подробнее</a>
             <a class="link-book" href="#">Забронировать</a>
             <span class="rating">Рейтинг: 9,2</span>
           </div>
           <ul class="rating-star">
-              <li> <img src="img/star.svg"></li>
-              <li> <img src="img/star.svg"></li>
-              </ul>
+            <li> <img src="img/star.svg" alt=""></li>
+            <li> <img src="img/star.svg" alt=""></li>
+          </ul>
         </li>
       </ul>
     </section>
   </main>
-  <footer class="container footer">
+  <footer class="container footer-catalog">
     <p class="hashtag">
       #Visitsedona
     </p>
@@ -149,5 +156,7 @@
       <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
     </p>
   </footer>
+  </div>
 </body>
+
 </html>
